<resources>
    <string name="app_name">Inventory</string>

    <!-- Label for detail activity -->
    <string name="app_product_details">Product Details</string>

    <!-- Label for detail menu option to edit the current product[CHAR LIMIT=20]-->
    <string name="action_edit">Edit</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for main menu option to add a product [CHAR LIMIT=20]-->
    <string name="action_add">Add</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Book</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Book</string>

    <!-- Label for product name information in the editor [CHAR LIMIT=30] -->
    <string name="category_product_name">Product Name</string>

    <!-- Label for product title in the editor [CHAR LIMIT=30] -->
    <string name="category_product_title">Title</string>

    <!-- Label for product author in the editor [CHAR LIMIT=30] -->
    <string name="category_product_author">Author</string>

    <!-- Label for product publisher in the editor [CHAR LIMIT=30] -->
    <string name="category_product_publisher">Publisher</string>

    <!-- Label for product isbn in the editor [CHAR LIMIT=30] -->
    <string name="category_product_isbn">ISBN</string>

    <!-- Label for product price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Label for product quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for supplier name information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_name">Supplier Name</string>

    <!-- Label for supplier email information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_email">Supplier Email</string>

    <!-- Label for supplier phone information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_phone">Supplier Phone</string>

    <!-- Label for supplier name information in the detail activity [CHAR LIMIT=20] -->
    <string name="category_name">Name</string>

    <!-- Label for supplier email information in the detail activity [CHAR LIMIT=20] -->
    <string name="category_email">Email</string>

    <!-- Label for supplier phone information in the detail activity [CHAR LIMIT=20] -->
    <string name="category_phone">Phone</string>

    <!-- Text for the button -->
    <string name="add_image">Add image</string>

    <!-- Toast message in detail activity to ensure that no negative quantities display -->
    <string name="detail_update_zero_quantity">0 is the lowest amount</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit quite in here&#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Click + button in the bottom right corner to add a new product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message to ask the user to confirm deleting all products [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Delete all products?</string>

    <!-- Dialog message to ask the user to use ISBN when adding a product [CHAR LIMIT=NONE] -->
    <string name="add_by_isbn_dialog_msg">Add a book by an ISBN?</string>

    <!-- Dialog button text for the option to enter an ISBN -->
    <string name="enter_an_isbn">Enter\nan ISBN</string>

    <!-- Dialog button text for the option to add a product manually -->
    <string name="add_manually">Add\nmanually</string>

    <!-- Order email message -->
    <string name="email_subject">Order for more</string>
    <string name="place_an_order">I\'d like to place an order for</string>
    <string name="period">.</string>
    <string name="copies_of">( ) copies of</string>
    <string name="best">Best,</string>
    <string name="colon">:</string>
    <string name="compose_email">Compose email</string>
    <string name="mailto">mailto:</string>
    <string name="n">\n</string>
    <string name="nn">\n\n</string>

    <!-- Content description of the image -->
    <string name="content_desc">product image</string>
    <string name="content_desc_email">email image</string>
    <string name="content_desc_phone">phone image</string>

    <!-- String for the supplier text view -->
    <string name="supplier">Supplier</string>

    <!-- Toast message in detail activity when the user granted phone call permission -->
    <string name="permission_granted">Permission granted</string>
    <!-- Toast message in detail activity when the user denied phone call permission -->
    <string name="permission_denied">Permission denied</string>

    <!-- Toast message for the input validation in editor activity -->
    <string name="empty_product_name">Title cannot be empty.</string>
    <string name="empty_product_author">Author cannot be empty.</string>
    <string name="empty_product_isbn">ISBN cannot be empty</string>
    <string name="empty_product_price">Price cannot be empty</string>
    <string name="empty_product_quantity">Quantity cannot be empty</string>
    <string name="empty_supplier_name">Supplier name cannot be empty</string>
    <string name="empty_supplier_phone">Supplier phone number cannot be empty</string>

    <!-- Toast message when a user do not enter the 13 digit ISBN in MainActivity -->
    <string name="enter_13_digit_isbn">Enter 13-digit ISBN</string>

    <!--Text input layout error message -->
    <string name="error_product_name">Please enter a valid title.</string>
    <string name="error_product_author">Please enter a valid author.</string>
    <string name="error_product_isbn">Please enter a valid ISBN.</string>
    <string name="error_product_price">Please enter a valid price.</string>
    <string name="error_product_quantity">Please enter a valid quantity.</string>
    <string name="error_supplier_name">Please enter a valid supplier name.</string>
    <string name="error_supplier_phone">Please enter a valid supplier phone number.</string>

    <!-- Text of the sale button -->
    <string name="sell">sell</string>
    <string name="sold_out">sold out</string>

    <!-- String for the Extra key name -->
    <string name="title">title</string>
    <string name="author">author</string>
    <string name="isbn">isbn</string>
    <string name="publisher">publisher</string>
    <string name="isbn_in_a_dialog">ISBN in a Dialog</string>

    <!-- Title for the intent in the pickImageFromGallery -->
    <string name="select_picture">Select Picture</string>
    <!-- image type in the pickImageFromGallery -->
    <string name="image_all_format">image/*</string>

    <!-- String for the phone intent -->
    <string name="tel_colon">tel:</string>

    <!-- String for the query "isbn:" -->
    <string name="query_isbn">isbn:</string>
    <!-- String for the query parameter -->
    <string name="q">q</string>

    <string name="no_matches_found">No matches found.\n\nAn ISBN is usually found on the back
        cover, near the barcode.</string>
    <string name="no_internet_connection">You are offline. Please check your Internet
        connection.</string>

    <!-- Intent title -->
    <string name="make_a_phone_call">Make a phone call</string>

    <string name="currency">$</string>
</resources>
