<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_scroll_view_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/detail_product_image"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/content_desc"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                style="@style/CategoryDetailTextStyle"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/category_product_title" />

            <TextView
                android:id="@+id/detail_product_name"
                style="@style/DetailTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:text="The Little Prince" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/author"
                style="@style/CategoryDetailTextStyle"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:text="@string/category_product_author" />

            <TextView
                android:id="@+id/detail_product_author"
                style="@style/DetailTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Antoine de Saint-Exupery" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/isbn"
                style="@style/CategoryDetailTextStyle"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:text="@string/category_product_isbn" />

            <TextView
                android:id="@+id/detail_product_isbn"
                style="@style/DetailTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="1234567890123" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/price"
                style="@style/CategoryDetailTextStyle"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:text="@string/category_price" />

            <TextView
                android:id="@+id/detail_product_price"
                style="@style/DetailTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="8.0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/publisher"
                style="@style/CategoryDetailTextStyle"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:text="@string/category_product_publisher" />

            <TextView
                android:id="@+id/detail_product_publisher"
                style="@style/DetailTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Reynal and Hitchcock" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/detail_margin"
            android:paddingTop="@dimen/detail_margin">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/detail_margin"
                android:layout_weight="1"
                android:background="@color/editor_colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/category_quantity"
                android:textColor="@color/color_detail_text"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/detail_margin"
                android:layout_weight="1"
                android:background="@color/editor_colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp">

            <Button
                android:id="@+id/detail_minus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/circle_button_remove"
                android:backgroundTint="@color/color_detail_button"
                android:gravity="center_vertical"
                android:src="@drawable/ic_remove_circle" />

            <TextView
                android:id="@+id/detail_product_quantity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:gravity="center"
                android:textColor="@color/color_detail_text"
                android:textSize="16sp"
                tools:text="10" />

            <Button
                android:id="@+id/detail_plus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/circle_button_add"
                android:backgroundTint="@color/color_detail_button"
                android:gravity="center_vertical"
                android:src="@drawable/ic_add_circle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/detail_margin"
            android:paddingTop="@dimen/detail_margin">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/detail_margin"
                android:layout_weight="1"
                android:background="@color/editor_colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/supplier"
                android:textColor="@color/color_detail_text"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/detail_margin"
                android:layout_weight="1"
                android:background="@color/editor_colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                style="@style/CategoryDetailTextStyle"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:text="@string/category_name" />

            <TextView
                android:id="@+id/detail_supplier_name"
                style="@style/DetailTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Neho and Becky Supplier" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/email"
                style="@style/CategoryDetailTextStyle"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:text="@string/category_email" />

            <TextView
                android:id="@+id/detail_supplier_email"
                style="@style/DetailTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="nehoandbecky@gmail.com" />

            <ImageButton
                android:id="@+id/detail_email_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/color_detail_button"
                android:contentDescription="@string/content_desc_email"
                android:src="@drawable/ic_email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CategoryDetailTextStyle"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:text="@string/category_phone" />

            <TextView
                android:id="@+id/detail_supplier_phone"
                style="@style/DetailTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="(200) 000-0000" />

            <ImageButton
                android:id="@+id/detail_phone_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/color_detail_button"
                android:contentDescription="@string/content_desc_phone"
                android:src="@drawable/ic_phone" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>